feat: recursive import problems T-T

--- a/generator/router.go.tmpl
+++ b/generator/router.go.tmpl
@@ -4,7 +4,7 @@
 // Also, it's recommended to use "mug generate" in a go:generate directive
 // in the main package to ensure that this file is generated before the application runs.
 // Using `mug` will, in the future, automatically `run go generate“ for you.
-package cup
+package cup_router
 
 import (
 	"net/http"
