--- a/generator/envs.go.tmpl
+++ b/generator/envs.go.tmpl
@@ -1,3 +1,6 @@
+// This is a generated package. It's not intended to be edited manually.
+// This is intended to be generated using the `mug` command.
+// It is used to initialize the package and can contain any necessary setup code.
 package cup
 
 {{.}}
