--- a/generator/router.go.tmpl
+++ b/generator/router.go.tmpl
@@ -1,9 +1,6 @@
-// This is a generated file. Do not edit it manually.
-// This is intended to be generated using the `mug generate` command.
+// This is a generated package. It's not intended to be edited manually.
+// This is intended to be generated using the `mug` command.
 // It is used to initialize the package and can contain any necessary setup code.
-// Also, it's recommended to use "mug generate" in a go:generate directive
-// in the main package to ensure that this file is generated before the application runs.
-// Using `mug` will, in the future, automatically `run go generate“ for you.
 package cup_router
 
 import (
