--- a/generator/router/inject_router.go.tmpl
+++ b/generator/router/inject_router.go.tmpl
@@ -3,9 +3,15 @@ http.HandleFunc("{{.Path}}", func(w http.ResponseWriter, r *http.Request) {
 	
 	err := json.NewDecoder(r.Body).Decode(&input)
 	if err != nil { 
-		http.Error(w, "Invalid payload", 400)
+		http.Error(w, invalidPayloadMsg, 400)
 		return
 	}
 
-	{{printf "%s.%s(input)" .Package .FnName}}
+	code, body := {{printf "%s.%s(input)" .Package .FnName}}
+	w.WriteHeader(code)
+	err = json.NewEncoder(w).Encode(body)
+	if err != nil {
+		http.Error(w, internalErrorMsg, 500)
+		return
+	}
 })
